--- a/BookStore/BookStore/Content/Site.css
+++ b/BookStore/BookStore/Content/Site.css
@@ -10,8 +10,8 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    background-color: rgba(0,0,20,0.8);
-    color: wheat;
+    background-color: rgb(255, 255, 255);
+    color: black;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -35,7 +35,7 @@ textarea {
 
 .myCass-ForBookDiv div{
     position: relative;
-    background-color: #222;
+    background-color: #fff;
     display: block;
     width: 350px;
     height: 350px;
@@ -44,20 +44,19 @@ textarea {
     text-align: center;
     font-size: 150%;
     padding-top: 5px;
-    border: 1px solid #222;
-    color: #bbb;
+    border: 1px solid #fff;
+    color: #fff;
 }
 
 .myCass-ForBookDiv div:hover{
- border:solid 2px red;
+  box-shadow:  -5px -3px 20px #888888;
  font-size:160%;
 }
 
 .nav-bar {
     color:red;
 }
-.class-for-button-add{
-    
+.class-for-button-add{  
    
     margin-right:20px;
     display: block;
@@ -79,12 +78,12 @@ textarea {
 }
 
 .srch:hover {
-    border: 2px solid #9C2D2D;
+    border: 2px solid black;
 }
 .srch{
     outline: none;
-    background-color: #111;
-    color: #fff;
+    background-color: #fff;
+    color: black;
     border: 2px solid #313043;
     height: 100%;
     width: 100%;
