Change Create Delete and Edit for Attributes

--- a/BookStore/BookStore/Views/Books/Edit.cshtml
+++ b/BookStore/BookStore/Views/Books/Edit.cshtml
@@ -6,80 +6,45 @@
 
 <h2>Edit</h2>
 
-@*<div class="container" style="display: block;width: 100px;margin-top: 15px;">
-
+<div class="container" style="float:right;">
+    
     <!-- Trigger the modal with a button -->
-    <button type="button" style="background-color:rgb(26, 26, 26);" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-        Add Author   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </button>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Attributes</button>
 
     <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog" style="background: rgba(0, 0, 0, 0.901961);">
+    <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
 
             <!-- Modal content-->
-            <div class="container body-content" style="width: 661px; background-color: rgb(18, 19, 19);">
+            <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Add Author</h4>
+                    <h4 class="modal-title">Attributes</h4>
                 </div>
                 <div class="modal-body">
-
-                    @using (Html.BeginForm("Create", "Authors", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                    {
-                        @Html.AntiForgeryToken()
-
-                        <div class="form-horizontal">
-
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Author.AuthorName, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Author.AuthorName, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Author.AuthorName, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Author.AuthorLastName, "Last Name", htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Author.AuthorLastName, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Author.AuthorLastName, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Author.BirthDay, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Author.BirthDay, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Author.BirthDay, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Author.Picture, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    <form action="demo_form.asp">
-                                        <input type="file" id="image1" name="image1" accept="image/*">
-                                    </form>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Create" class="btn btn-default" />
-                                </div>
-                            </div>
-                        </div>
-                    }
+                <div>
+                      <div>
+                        @Html.DropDownList("AttributeID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.AttributeID, "", new { @class = "text-danger" })
+                    </div>                    
                 </div>
-
+                    <div >
+                        <br />                     
+                        <div>
+                            Value
+                            <input type="text" name="Value" value="" class="form-control" />
+                        </div>
+                    </div>
+                    
+                <div class="modal-footer">
+                    <input type="submit" value="Add" class="btn btn-default" data-dismiss="modal" />                    
+                </div>
             </div>
 
         </div>
     </div>
-
-</div>*@
+</div>
+</div>
 
 @using (Html.BeginForm("Edit", "Books", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
