--- a/BookStore/BookStore/Views/Books/Create.cshtml
+++ b/BookStore/BookStore/Views/Books/Create.cshtml
@@ -6,8 +6,7 @@
 
 <h2 style="float:left;">Create</h2>
 
-@*Avelacnel Ajax zaprosov gnaly*@
-<div class="container" style="display: block;width: 100px;margin-top: 15px;">
+<div class="container" style="display:inline-block;width: 100px;margin-top: 20px; margin-left:20%;">
 
     <!-- Trigger the modal with a button -->
     <button type="button" style="background-color:rgb(26, 26, 26);" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
@@ -79,6 +78,19 @@
 
         </div>
     </div>
+
+</div>
+
+
+
+
+<div style="float:right; display:inline-block; margin-top:20px;">
+    @Html.LabelFor(model => model.AttributeID, "+Attribute", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div>
+        @Html.DropDownList("AttributeID", null, htmlAttributes: new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.AttributeID, "", new { @class = "text-danger" })
+    </div>
+    @*<input type="submit" value="Add" class="btn btn-default" />*@
 
 </div>
 
@@ -159,6 +171,9 @@
             </div>
         </div>
     </div>
+
+  
+
 }
 
 <div>
