Add Controller Attribute and Book this cantroller help to add attribute to book ... Begin))

--- a/BookStore/BookStore/Views/Books/Index.cshtml
+++ b/BookStore/BookStore/Views/Books/Index.cshtml
@@ -25,6 +25,10 @@
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 @Html.ActionLink(" Create New", "Create")
             </button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                @Html.ActionLink(" Add Attributes","Create","BookAddAttributes")
+            </button>
         }
     </p>
 
