--- a/BookStore/BookStore/Views/Books/Details.cshtml
+++ b/BookStore/BookStore/Views/Books/Details.cshtml
@@ -113,6 +113,12 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt>
+            Attribute
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.BookAddAttributes)
+        </dd>
 
     </dl>
 </div>
