--- a/BookStore/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/BookStore/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                     <li>@Html.ActionLink("Author", "Index", "Authors")</li>
-                    <li>@Html.ActionLink("Create Attribute", "Index", "Attributes")</li>
+                    <li>@Html.ActionLink("Attribute", "Index", "Attributes")</li>
 
                     }                               
                 </ul>
