--- a/BookStore/BookStore/Views/BookAddAttributes/Edit.cshtml
+++ b/BookStore/BookStore/Views/BookAddAttributes/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.BookAddAttributesID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BookID, "BookID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BookID, "Book", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("BookID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BookID, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeID, "AttributeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AttributeID, "Attribute", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("AttributeID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AttributeID, "", new { @class = "text-danger" })
@@ -34,38 +34,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ValueTypeText, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ValueTypeText,"Value", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ValueTypeText, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ValueTypeText, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValueTypeDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValueTypeDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValueTypeDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Ganre, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Ganre)
-                    @Html.ValidationMessageFor(model => model.Ganre, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.GanreID, "GanreID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("GanreID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.GanreID, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
