--- a/BookStore/BookStore/Views/BookAddAttributes/Create.cshtml
+++ b/BookStore/BookStore/Views/BookAddAttributes/Create.cshtml
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AttributeID, "Attribute List", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div style="display:inline-block;">@Html.DropDownList("AttributeID", null, "Select attributes", htmlAttributes: new { @class = "form-control", @id = "dd1" })</div>
+                <div style="display:inline-block; width: 202px;">@Html.DropDownList("AttributeID", null, "Select attributes", htmlAttributes: new { @class = "form-control", @id = "dd1" })</div>
                 @Html.ValidationMessageFor(model => model.AttributeID, "", new { @class = "text-danger" })
                 <a>
                     <button type="button" class="btn btn-default" aria-label="Left Align" style="width: 72px;">
